Add ingredients and steps to make a pizza

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,5 +11,21 @@
         <h1>Pizza</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Pizza_%281%29.jpg/1200px-Pizza_%281%29.jpg" alt="Delicious Looking Pizza">
         <p>This is a delicious pizza made from ingredients such as pepperoni, olives, and green pepper. It's very easy to make, meaning just about anybody can make it!</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Pepperoni</li>
+            <li>Olives</li>
+            <li>Dough</li>
+            <li>Tomato Sauce</li>
+            <li>Green Pepper</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Knead the dough</li>
+            <li>Put tomato sauce on the dough</li>
+            <li>Put toppings on the dough</li>
+            <li>Put in pizza oven for some time</li>
+            <li>Take out and cut into 8 pieces before eating. Enjoy!</li>
+        </ol>
     </body>
 </html>
