--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h1>Odin Recipes</h1>
         <a href="./recipes/pizza.html">Pizza</a>
         <a href="./recipes/rice.html">Rice</a>
+        <a href="./recipes/burger.html">Burger</a>
     </body>
 </html>
